--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-switch": "^7.0.0",
+    "react-webcam": "^7.2.0",
     "reactjs-popup": "^2.0.5",
     "resolve-url-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
