--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-macros": "^3.1.0",
     "dart-sass": "^1.25.0",
     "google-map-react": "^2.2.1",
+    "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.11.0",
