--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,9 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-native-audio-recorder-player": "^3.6.6",
+    "react-native-fs": "^2.20.0",
+    "react-native-sound-player": "^0.13.2",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
