--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@devexpress/dx-react-chart-material-ui": "^4.0.8",
     "@stripe/react-stripe-js": "^2.1.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -29,6 +30,7 @@
     "react-switch": "^7.0.0",
     "react-webcam": "^7.2.0",
     "reactjs-popup": "^2.0.5",
+    "recharts": "^2.12.0",
     "resolve-url-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
   },
